# ai-trading-system

./: .docs-pr-checklist.md  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  audit_rank.py  claude.md  compute_sector_rs.py  download_all.py  download_historical_data.py  export_excel.py  main.py  pyproject.toml  requirements.txt  run_daily_update.ps1  run_pipeline.py  setup_daily_task.ps1
.github/workflows/: daily.yml  deploy-dashboard.yml  docs.yml  quality.yml
ai_trading_system/: match_and_create_table.py
analytics/: __init__.py  backtester.py  breakout_research.py  data_trust.py  feature_reader.py  lightgbm_engine.py  lightgbm_research.py  market_stage.py  ml_engine.py  rank_backtester.py  ranker.py  regime_detector.py  risk_manager.py  screener.py  sector_health.py  shadow_monitor.py  stage_classifier.py  stage_eligibility.py  stage_gate_backtest.py  stage_store.py  strategy_router.py  test_analytics.py  training_dataset.py  visualizations.py  weekly.py
analytics/alpha/: __init__.py  dataset_builder.py  feature_schema.py  policy.py  scoring.py  training.py
analytics/dq/: engine.py
analytics/patterns/: __init__.py  contracts.py  data.py  detectors.py  evaluation.py  signal.py
analytics/registry/: store.py
channel/: ai_analyzer.py  breakout_scan.py  dashboard_publisher.py  google_sheets_example.py  google_sheets_manager.py  portfolio_analyzer.py  portfolio_example.py  sector_dashboard.py  stock_scan.py  telegram_example.py  telegram_reporter.py
channel/reports/: portfolio_holdings.csv
collectors/: __init__.py  archive_nse_bhavcopy.py  auth_doctor.py  compute_features_batch.py  daily_update_runner.py  delete_stale.py  delivery_collector.py  dhan_collector.py  dhan_ohlc_diagnostics.py  index_backfill.py  ingest_full.py  ingest_validation.py  masterdata.py  nse_collector.py  nse_delivery_scraper.py  repair_ohlcv_window.py  reset_reingest_validate.py  run_full_rank.py  stock_backfill.py  test_marketfeed_ohlc.py  token_manager.py  yfinance_collector.py  zerodha_sector_collector.py
config/: __init__.py  active_regime_profile.yaml  active_regime_rules.yaml  active_risk_matrix.yaml  llm_brain.yaml  research_recipes.toml  settings.py
config/risk_profiles/: aggressive_momentum.yaml  (+4 more)
core/: __init__.py  bootstrap.py  contracts.py  env.py  logging.py  paths.py  runtime_config.py  symbol_master.py  trust_confidence.py
dashboard/: __init__.py  app.py
data/: masterdata.db  masterdata.xlsx
docs/: AS_IS_DESIGN.md  CODEX_JUMPSTART.md  DOCS_STANDARD.md  EXECUTION_CONSOLE_PLAN.md  EXECUTION_PLAN.md  INDEX.md  README.md  SYSTEM_GUIDE.md  architecture.md  architecture_review.md  architecture_target.md  data-flow.md  database.md  dhan_ohlc_isolation_strategy.md  dq_rules.md  fundamental_layer.md  high_level_operational_data_flow.md  implementation_roadmap.md  ml_architecture_integration.md  ml_implementation_plan.md  ohlcv_reset_reingest_runbook.md  ops_runbook.md  pending_todo.md  performance_tracker_diagnostics.md  react-operator-migration-plan.md  regime_alternate_signals_findings.md  research_backtesting.md
execution/: __init__.py  autotrader.py  policies.py  portfolio.py  service.py  store.py
features/: __init__.py  compute_all_features.py  compute_sector_rs.py  feature_store.py  indicators.py  pattern_features.py  test_feature_store.py
publishers/: __init__.py  dashboard.py  google_sheets.py  quantstats_dashboard.py  telegram.py
research/: __init__.py  backfill_delivery_data.py  backfill_static_data.py  backtest_breakout_setups.py  backtest_patterns.py  backtest_pipeline.py  eval_pipeline.py  plot_feature_importance.py  prepare_training_dataset.py  recipes.py  run_lightgbm_workflow.py  run_recipe.py  shadow_monitor.py  train_lightgbm.py  train_pipeline.py
run/: __init__.py  alerts.py  daily_pipeline.py  orchestrator.py  preflight.py  publish_test.py  publisher.py  pyvenv.cfg
scripts/: audit_perf_tracker_phase1.py  backfill_rank_cohort_historical.py  backtest_regime_report.py  bootstrap_runtime_data.py  check_docs.py  combined_winner_analysis.py  export_phase4_openapi.py  investigate_alternate_signals.py  multi_year_winner_study.py  optimise_ranking_weights.py  optimise_ranking_weights_v2.py  rank_factor_validation.py  rebuild_perf_tracker_clean.py  regime_analysis_charts.py  repair_ingest_schema.py  run_daily_shadow.sh  run_decision_e2e_api.py  run_stage_gate_backtest.py  run_weekly_stage.py  run_weekly_stage.sh  start_dashboard_backend.sh  swap_perf_tracker_clean.py  winner_factor_analysis.py
streamlit/: pyvenv.cfg
test/: test_create_table.py  test_pipeline_orchestrator.py
tests/: test_alert_manager.py  test_alpha_training.py  test_alternate_signals.py  test_archive_nse_bhavcopy.py  test_auth_bootstrap.py  test_autotrader_execute_stage.py  test_backtest_pipeline_benchmark.py  test_breadth_no_lookahead.py  test_breadth_velocity_point_in_time.py  test_breakout_taxonomy_v2.py  test_check_docs.py  test_collectors_shim_compat.py  test_control_plane_migrations.py  test_control_plane_timestamps.py  test_daily_gainers_report.py  test_daily_pipeline_bhavcopy_defaults.py  test_daily_update_runner_sources.py  test_dashboard_helpers.py  test_dashboard_publish_single_sheet.py  test_data_trust_controls.py  test_data_trust_summary.py  test_db_paths_defaults.py  test_decision_history.py  test_decision_read_repositories.py  test_dhan_collector_daily_window.py  test_dhan_ohlc_diagnostics.py  test_early_accumulation.py  test_execute_breadth_dry_run.py  test_execute_raw_regime_override.py  test_execute_risk_per_trade_pct.py  test_execute_uses_regime_profile.py  test_execution_api.py  test_execution_api_backtest.py  test_execution_api_fundamentals.py  test_execution_api_investigator.py  test_execution_api_optimization.py  test_execution_api_perf_tracker.py  test_execution_api_ranking_detail.py  test_execution_api_runs_introspection.py  test_execution_api_snapshots.py  (+78 more)
tools/: __init__.py  build_universe_index.py  export_excel.py
ui/: __init__.py
utils/: __init__.py  compact_features.py  data_config.py  data_domains.py  logger.py  pyarrow_utils.py
(+1253 files in other folders)
