[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-system"
version = "0.1.0"
description = "Technical NSE trading pipeline with staged orchestration, DQ, and dashboarding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.1.3",
  "fastapi==0.115.8",
  "jinja2>=3.1",
  "mplfinance>=0.12",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "plotly",
  "pyarrow",
  "pydantic",
  "python-dotenv",
  "quantstats==0.0.64",
  "requests",
  "uvicorn==0.34.0",
  "weasyprint>=62.0",
  "market_intel @ git+https://github.com/prashantsirohi/market_intel@master",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.scripts]
ai-trading-pipeline = "ai_trading_system.pipeline.orchestrator:main"
ai-trading-healthcheck = "ai_trading_system.interfaces.cli.healthcheck:main"
ai-trading-publish-test = "ai_trading_system.pipeline.publish_test:main"
ai-trading-daily = "ai_trading_system.pipeline.daily_pipeline:main"
ai-trading-execution-api = "ai_trading_system.ui.execution_api.app:main"
ai-trading-research-recipe = "ai_trading_system.research.run_recipe:main"
ai-trading-bootstrap-data = "ai_trading_system.interfaces.cli.bootstrap_runtime_data:main"
ai-trading-repair-ingest-schema = "ai_trading_system.interfaces.cli.repair_ingest_schema:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "ai_trading_system*",
]
exclude = [
  "data*",
  "docs*",
  "logs*",
  "models*",
  "reports*",
  "sql*",
  "test*",
]

[tool.setuptools.package-data]
ai_trading_system = [
  "pipeline/migrations/*.sql",
  "domains/publish/channels/weekly_pdf/templates/*.html",
  "domains/publish/channels/weekly_pdf/static/*.css",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]
testpaths = [
  "tests",
]
