[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-system"
version = "0.1.0"
description = "Technical NSE trading pipeline with staged orchestration, DQ, and dashboarding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb==1.1.3",
  "fastapi==0.115.8",
  "jinja2>=3.1",
  "markdown-it-py>=4.0",
  "mplfinance>=0.12",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "openpyxl>=3.1",
  "plotly",
  "playwright>=1.52",
  "pyarrow",
  "pydantic",
  "python-dotenv",
  "quantstats==0.0.64",
  "requests",
  "uvicorn==0.34.0",
  "weasyprint>=62.0",
  "market_intel @ git+https://github.com/prashantsirohi/market_intel@master",
  "optuna>=4.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.scripts]
ai-trading-pipeline = "ai_trading_system.pipeline.orchestrator:main"
ai-trading-healthcheck = "ai_trading_system.interfaces.cli.healthcheck:main"
ai-trading-publish-test = "ai_trading_system.pipeline.publish_test:main"
ai-trading-daily = "ai_trading_system.pipeline.daily_pipeline:main"
ai-trading-execution-api = "ai_trading_system.ui.execution_api.app:main"
ai-trading-research-recipe = "ai_trading_system.research.run_recipe:main"
ai-trading-bootstrap-data = "ai_trading_system.interfaces.cli.bootstrap_runtime_data:main"
ai-trading-repair-ingest-schema = "ai_trading_system.interfaces.cli.repair_ingest_schema:main"
ai-trading-repair-control-plane-timestamps = "ai_trading_system.interfaces.cli.repair_control_plane_timestamps:main"
ai-trading-daily-gainers-report = "ai_trading_system.domains.publish.channels.daily_gainers.cli:main"
ai-trading-fundamental-opportunity-report = "ai_trading_system.domains.publish.channels.fundamental_opportunities.cli:main"
ai-trading-optimize = "ai_trading_system.research.optimization.cli:main"
ai-trading-optimize-promote = "ai_trading_system.research.optimization.promote:main"
ai-trading-fundamentals-sync = "ai_trading_system.domains.fundamentals.screener_sync:main"
ai-trading-fundamentals-refresh-readmodels = "ai_trading_system.domains.fundamentals.screener_readmodels:main"
ai-trading-fundamentals-validate-exports = "ai_trading_system.domains.fundamentals.screener_export_validation:main"
ai-trading-valuation-refresh = "ai_trading_system.domains.features.valuation_refresh:main"
ai-trading-sector-earnings-refresh = "ai_trading_system.domains.features.sector_earnings_leadership:main"
ai-trading-backfill-operational-valuation = "ai_trading_system.interfaces.cli.backfill_operational_valuation:main"
ai-trading-winner-validation-report = "ai_trading_system.research.backtesting.winner_validation:main"
ai-trading-early-accumulation-validate = "ai_trading_system.research.backtesting.early_accumulation_validation:main"
ai-trading-symbol-report = "ai_trading_system.research.symbol_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "ai_trading_system*",
]
exclude = [
  "data*",
  "docs*",
  "logs*",
  "models*",
  "reports*",
  "sql*",
  "test*",
]

[tool.setuptools.package-data]
ai_trading_system = [
  "pipeline/migrations/*.sql",
  "domains/publish/channels/weekly_pdf/templates/*.html",
  "domains/publish/channels/weekly_pdf/static/*.css",
  "domains/publish/channels/daily_gainers/templates/*.html",
  "domains/publish/channels/daily_gainers/static/*.css",
  "domains/publish/channels/fundamental_opportunities/templates/*.html",
  "domains/publish/channels/fundamental_opportunities/templates/partials/*.html",
  "domains/publish/channels/fundamental_opportunities/static/*.css",
  "research/optimization/templates/*.tmpl",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:fastapi.*",
  "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:starlette.*",
]
